--- a/test/css/base2/base2.css
+++ b/test/css/base2/base2.css
@@ -4,6 +4,7 @@
     filter: blur(10px);
     transform: translate3d(0, 0, 0);
     background: url("../../image/4.png?__spriter") 0 0;
+    background-size: 30px 100px;
 }
 
 .image2 {
