--- a/test/css/base2/base2.css
+++ b/test/css/base2/base2.css
@@ -1,22 +1,5 @@
-.image1 {
-    width: 100px;
-    height: 30px;
-    filter: blur(10px);
-    transform: translate3d(0, 0, 0);
-    background: url("../../image/4.png?__spriter") 0 0;
-    background-size: 30px 100px;
-}
+.image1 {width: 100px;height: 30px;filter: blur(10px);transform: translate3d(0, 0, 0);background-repeat: no-repeat;}
 
-.image2 {
-    width: 70px;
-    background: url("../../image/2.png?__spriter") 0 0;
-    background-size: 70px 10px;
-    height: 10px;
-}
+.image2 {width: 70px;height: 10px;background-repeat: no-repeat;}
 
-.image3 {
-    background: url("../../image/3.png?__spriter") 0 0;
-    background-size: 60px 10px;
-    height: 10px;
-    width: 60px;
-}
+.image3 {height: 10px;width: 60px;background-repeat: no-repeat;}.image1{background-position:-40px 0px}.image2{background-position:0px -103px}.image3{background-position:-10px -116px}.image1,.image2,.image3{background-image: url(../../build/image/base2_3d36523204_z.png)}
